apiserver/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: api
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/rule-type: "PathPrefixStrip"
    external-dns.alpha.kubernetes.io/target: home.cluster.camp
spec:
  rules:
    - host: api.cluster.camp
      http:
        paths:
          - path: /
            backend:
              serviceName: kubernetes
              servicePort: 6443
